<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="#ffdde8ce">

    <LinearLayout
        android:id="@+id/top_weekbar"
        android:layout_marginLeft="45dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <Button
            style="@style/AppTheme.weekday_buttons"
            android:text="@string/weekday_short_monday"
            android:onClick="onClickGoToMondayLayout"/>
        <Button
            style="@style/AppTheme.weekday_buttons"
            android:text="@string/weekday_short_tuesday"/>
        <Button
            style="@style/AppTheme.weekday_buttons"
            android:text="@string/weekday_short_wednesday"/>
        <Button
            style="@style/AppTheme.weekday_buttons"
            android:text="@string/weekday_short_thursday"/>
        <Button
            style="@style/AppTheme.weekday_buttons"
            android:text="@string/weekday_short_friday"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_weekbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#ffbac6ce">

            <GridLayout
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="13">
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_eightAM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_nineAM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_tenAM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_elevenAM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_twelvePM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_onePM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_twoPM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_threePM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_fourPM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_fivePM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_sixPM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_sevenPM"/>
                <TextView
                    style="@style/AppTheme.time_blocks"
                    android:text="@string/time_eightPM"/>
                </GridLayout>
            <GridLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:columnCount="1"
                android:rowCount="13">
                <TextView
                    android:text="set column"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="second"
                    android:layout_row="2"/>
            </GridLayout>
            <GridLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:columnCount="1"
                android:rowCount="13">
            </GridLayout>
            <GridLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:columnCount="1"
                android:rowCount="13">
            </GridLayout>
            <GridLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:columnCount="1"
                android:rowCount="13">
            </GridLayout>
            <GridLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:columnCount="1"
                android:rowCount="13">
            </GridLayout>


            </LinearLayout>


    </ScrollView>



</RelativeLayout>
