<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffffbab">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/back_button_2"
        android:background="@drawable/day_buttons"
        android:onClick="onClickGoBackHome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/weekday_full_monday"
        android:textSize="35sp"
        android:background="#ff8093b8"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/title" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:layout_below="@id/back_button"
        android:onClick="onClickGoToEditPage"
        android:layout_alignParentRight="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/back_button"
        android:layout_toLeftOf="@id/edit_button">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ff2fffaa"
            android:columnCount="1"
            android:rowCount="13">

            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_eightAM"
                android:layout_row="0"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_nineAM"
                android:layout_row="1"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_tenAM"
                android:layout_row="2"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_elevenAM"
                android:layout_row="3"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_twelvePM"
                android:layout_row="4"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_onePM"
                android:layout_row="5"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_twoPM"
                android:layout_row="6"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_threePM"
                android:layout_row="7"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_fourPM"
                android:layout_row="8"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_fivePM"
                android:layout_row="9"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_sixPM"
                android:layout_row="10"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_sevenPM"
                android:layout_row="11"/>
            <TextView
                style="@style/AppTheme.time_blocks_2"
                android:text="@string/time_eightPM"
                android:layout_row="12"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff5faffa"
            android:columnCount="1"
            android:rowCount="13">

            <!-- Monday column -->
            <TextView
                style="@style/AppTheme.day_entry_grid_column"
                android:text="@string/paper_code_phsi232"
                android:layout_row="0"/>
            <TextView style="@style/AppTheme.day_entry_test_cells"
                android:layout_row="1"/>
            <TextView style="@style/AppTheme.day_entry_test_cells"
                android:layout_row="2"/>
            <TextView
                style="@style/AppTheme.day_entry_grid_column"
                android:text="@string/paper_code_cosc242"
                android:textAlignment="center"
                android:layout_row="3"/>
            <TextView style="@style/AppTheme.day_entry_test_cells"
                android:layout_row="4"/>
            <TextView style="@style/AppTheme.day_entry_test_cells"
                android:layout_row="5"/>
            <TextView style="@style/AppTheme.day_entry_test_cells"
                android:layout_row="6"/>
            <TextView
                style="@style/AppTheme.day_entry_grid_column"
                android:text="@string/paper_code_bsns106"
                android:layout_row="7"/>
            <TextView
                style="@style/AppTheme.day_entry_grid_column"
                android:text="@string/paper_code_cosc242"
                android:layout_row="8"/>


        </GridLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>

