<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff6d80a5">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/done_button"
        android:onClick="onClickSaveEntry"
        android:background="#fff0862c"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/weekday_full_monday"
        android:textSize="35sp"
        android:background="#ff8093b8"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/title" />

    <LinearLayout
        android:id="@+id/layout1_edit_page"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@id/title">
        <TextView
            style="@style/AppTheme.edit_page_labels"
            android:text="@string/paper_label"
            android:id="@+id/paper_label"/>
        <AutoCompleteTextView
            android:id="@+id/paper_code_complete"
            android:labelFor="@id/paper_code_complete"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/paper_code_textfield_hint"
            android:textColorHint="#ffffff"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2_edit_page"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout1_edit_page">
        <TextView
            style="@style/AppTheme.edit_page_labels"
            android:text="@string/room_label"
            android:id="@+id/room_label"/>
        <AutoCompleteTextView
            android:id="@+id/room_code_complete"
            android:labelFor="@id/room_code_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:hint="@string/room_code_hint"
            android:textColorHint="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3_edit_page"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout2_edit_page">
        <TextView
            style="@style/AppTheme.edit_page_labels"
            android:text="@string/type_label"
            android:id="@+id/type_label"/>
        <Spinner
            android:id="@+id/schedule_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/preview_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:background="#afafaf"
        android:text="preview"
        android:textSize="25sp"
        android:layout_below="@id/layout3_edit_page"
        android:onClick="onClickPreviewEntry"/>

</RelativeLayout>
